--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.15",
-    "dotenv": "^16.4.5"
+    "helmet": "^8.1.0",
+    "nodemailer": "^6.10.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.9",
+    "@types/helmet": "^0.0.48",
+    "@types/node": "^20.19.17",
+    "@types/nodemailer": "^7.0.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.2"
   }
 }
