--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "build": "tsc",
+    "build": "esbuild src/index.ts --platform=node --bundle --format=esm --outdir=dist --external:express --external:cors --external:helmet --external:compression --external:dotenv",
     "start": "node dist/index.js"
   },
   "dependencies": {
@@ -16,6 +16,10 @@
     "nodemailer": "^6.10.1",
     "zod": "^4.1.11"
   },
+  "engines": {
+  "node": "20.x",
+  "npm": "10.x"
+  },
   "devDependencies": {
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
@@ -23,6 +27,7 @@
     "@types/helmet": "^0.0.48",
     "@types/node": "^20.19.17",
     "@types/nodemailer": "^7.0.1",
+    "esbuild": "^0.25.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
